# Virtual-Audio-Router

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_release.ps1  installer.iss
bindings/: CMakeLists.txt
bindings/src/: var_bindings.cpp
cmake/: version.h.in
config/: default_settings.json
core/include/var/: Constants.h  Result.h  Types.h
driver/: README.md
engine/: CMakeLists.txt
engine/include/var/: AudioEngine.h  AudioRouter.h  BufferManager.h  DeviceManager.h  EventDispatcher.h  IDevice.h  LatencyManager.h  Logger.h  OutputDevice.h  Resampler.h  SynchronizationManager.h  ThreadPool.h
engine/src/: AudioEngine.cpp  AudioRouter.cpp  BufferManager.cpp  DeviceManager.cpp  EventDispatcher.cpp  LatencyManager.cpp  Logger.cpp  OutputDevice.cpp  Resampler.cpp  SynchronizationManager.cpp  ThreadPool.cpp
gui/: VirtualAudioRouter.spec  VirtualAudioRouter_Portable.spec  main.py
gui/app/: __init__.py  device_panel.py  main_window.py  profile_manager.py  settings_dialog.py  tray_icon.py
gui/core/: __init__.py  engine_bridge.py  logger.py  settings.py
gui/resources/styles/: dark_theme.qss
installer/: README.md
tests/: CMakeLists.txt
tests/unit/: test_logger.cpp  test_result.cpp
